       *READ-SUPPRESS* is T
    ** signal an error if a symbol that names a declaration is used
       as the name of a type, or vice versa
    ** allow using the (declare (typespec var*)) abbreviation for 
       (declare (type typespec var*)) with all type specifiers
    ** circularity detection works properly with PPRINT-LOGICAL-BLOCK

changes in sbcl-0.9.1 relative to sbcl-0.9.0:
  * fixed cross-compiler leakages that prevented building a 32-bit
    target with a 64-bit host compiler.
  * fixed a bug in CLOSE :ABORT T: no longer attempts to remove files
    opened with :IF-EXISTS :OVERWRITE.
  * fixed bug 281: error for an invalid qualifier in a short-form method
    combination method is not signalled until the faulty method is called.
  * bug fix: iteration variable type inferrer failed to deal with open
    intervals. (reported by Alan Shields)
  * bug fix: dynamically loading (via LOAD-SHARED-OBJECT or similar)
    "frameworks" on Mac OS X no longer causes an EXC_BAD_ACCESS if two
    or more runtime options were provided to the sbcl binary.
  * compiled code is not steppable if COMPILATION-SPEED >= DEBUG.
  * contrib improvement: implement SB-POSIX:MKSTEMP (Yannick Gingras)
  * optimization: there's now a fast-path for fixnum arguments in the
    generic subtraction routines on x86/x86-64. (Thanks to Lutz Euler)
  * optimization: the code generated on x86-64 is more compact thanks
    to not outputting unneccessary prefix bytes. (Thanks to Lutz Euler)
  * bug fix: floating-point exception handling now partly works on
    x86-64.  (Thanks to James Knight)
  * improvement to the MIPS backend from Thiemo Seufer: C-style
    64-bit long long arguments and return values to alien functions
    are now supported.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the type-error signalled from WARN has a filled-in DATUM slot.
    ** the type-error required when a stream is not associated with
       a file has the stream as its datum.